--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
             <a class="navbar__link" href="./pages/shop/shop.html">SHOP</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/register.html">REGISTRARSE</a>
+            <a class="navbar__link" href="./pages/admin/register.html"
+              >REGISTRARSE</a
+            >
           </li>
           <li class="navbar__item">
             <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a>
