--- a/pages/shop/item.html
+++ b/pages/shop/item.html
@@ -158,10 +158,10 @@
       <nav class="navbar container">
         <ul class="navbar__item">
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/shop/shop.html">SHOP</a>
+            <a class="navbar__link" href="./shop.html">SHOP</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/register.html">REGISTRARSE</a>
+            <a class="navbar__link" href="../admin/register.html">REGISTRARSE</a>
           </li>
           <li class="navbar__item">
             <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a>
