--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <ul class="slider__items">
           <li class="slider__item">
             <article class="card-item">
-              <a class="card-item__link" href="">
+              <a class="card-item__link" href="./pages/shop/item.html">
                 <picture class="card-item__cover">
                   <span class="card-item__badge">NUEVO</span>
                   <img
@@ -138,7 +138,7 @@
           </li>
           <li class="slider__item">
             <article class="card-item">
-              <a class="card-item__link" href="">
+              <a class="card-item__link" href="./pages/shop/item.html">
                 <picture class="card-item__cover">
                   <span class="card-item__badge">NUEVO</span>
                   <img
@@ -163,7 +163,7 @@
           </li>
           <li class="slider__item">
             <article class="card-item">
-              <a class="card-item__link" href="">
+              <a class="card-item__link" href="./pages/shop/item.html">
                 <picture class="card-item__cover">
                   <span class="card-item__badge">NUEVO</span>
                   <img
