--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -75,7 +75,9 @@
         />
 
         <div class="form__login">
-          <button class="form__button" type="submit">Ingresar</button>
+          <button class="form__button">
+            <a href="./admin.html">Ingresar</a>
+          </button>
           <input class="form__check" type="checkbox" name="tyc" id="tyc" />
           <label class="form__check-label" for="tyc">Recordarme </label>
         </div>
