--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -23,7 +23,7 @@
         </picture>
         <ul class="navbar__menu">
           <li class="navbar__item with-submenu">
-            <a class="navbar__link with-icon" href="./pages/shop/shop.html"
+            <a class="navbar__link with-icon" href="./shop.html"
               >SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon
             ></a>
 
@@ -40,13 +40,13 @@
             </ul>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/contact.html">CONTACTO</a>
+            <a class="navbar__link" href="./../contact.html">CONTACTO</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a>
+            <a class="navbar__link" href="./../admin/login.html">LOGIN</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__cart" href="./pages/cart.html">
+            <a class="navbar__cart" href="./../shop/cart.html">
               <img src="../../img/icons/cart-icon.svg" alt="ícono de carrito" />
             </a>
           </li>
@@ -121,7 +121,7 @@
       </aside>
       <section class="shop-main__contenido">
         <article class="card-item">
-          <a class="card-item__link" href="./item.html">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -144,7 +144,7 @@
           </a>
         </article>
         <article class="card-item">
-          <a class="card-item__link" href="">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -167,7 +167,7 @@
           </a>
         </article>
         <article class="card-item">
-          <a class="card-item__link" href="">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -190,7 +190,7 @@
           </a>
         </article>
         <article class="card-item">
-          <a class="card-item__link" href="">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -213,7 +213,7 @@
           </a>
         </article>
         <article class="card-item">
-          <a class="card-item__link" href="">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -236,7 +236,7 @@
           </a>
         </article>
         <article class="card-item">
-          <a class="card-item__link" href="">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -259,7 +259,7 @@
           </a>
         </article>
         <article class="card-item">
-          <a class="card-item__link" href="">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -282,7 +282,7 @@
           </a>
         </article>
         <article class="card-item">
-          <a class="card-item__link" href="">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -305,7 +305,7 @@
           </a>
         </article>
         <article class="card-item">
-          <a class="card-item__link" href="">
+          <a class="card-item__link" href="../shop/item.html">
             <picture class="card-item__cover">
               <span class="card-item__badge">NUEVO</span>
               <img
@@ -352,10 +352,10 @@
             >
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a>
+            <a class="navbar__link" href="../admin/login.html">LOGIN</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/contact.html">CONTACTO</a>
+            <a class="navbar__link" href="../contact.html">CONTACTO</a>
           </li>
         </ul>
         <picture>
