--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -22,33 +22,8 @@
           </a>
         </picture>
         <ul class="navbar__menu">
-          <li class="navbar__item with-submenu">
-            <a class="navbar__link with-icon" href="../../pages/shop/shop.html"
-              >SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon
-            ></a>
-
-            <ul class="submenu">
-              <li class="submenu__item">
-                <a href="" class="submenu__link">Funkos</a>
-              </li>
-              <li class="submenu__item">
-                <a href="" class="submenu__link">Remeras</a>
-              </li>
-              <li class="submenu__item">
-                <a href="" class="submenu__link">Llaveros</a>
-              </li>
-            </ul>
-          </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="../pages/contact.html">CONTACTO</a>
-          </li>
-          <li class="navbar__item">
-            <a class="navbar__link" href="../pages/admin/login.html">LOGIN</a>
-          </li>
-          <li class="navbar__item">
-            <a class="navbar__cart" href="../pages/cart.html">
-              <img src="../../img/icons/cart-icon.svg" alt="ícono de carrito" />
-            </a>
+            <a class="navbar__link" href="../pages/admin/logout.html">Salir</a>
           </li>
         </ul>
       </nav>
@@ -95,7 +70,7 @@
               <td>Baby Yoda Blueball</td>
               <td>Figura Coleccionable</td>
               <td>
-                <a href=""
+                <a href="./edit.html"
                   ><img src="../../img/icons/edit_pencil.svg" alt=""
                 /></a>
               </td>
@@ -111,7 +86,7 @@
               <td>Boba Fett Fighter</td>
               <td>Figura Coleccionable</td>
               <td>
-                <a href=""
+                <a href="./edit.html"
                   ><img src="../../img/icons/edit_pencil.svg" alt=""
                 /></a>
               </td>
@@ -127,7 +102,7 @@
               <td>Luke Skylwalker & Grogu</td>
               <td>Figura Coleccionable</td>
               <td>
-                <a href=""
+                <a href="./edit.html"
                   ><img src="../../img/icons/edit_pencil.svg" alt=""
                 /></a>
               </td>
@@ -143,7 +118,7 @@
               <td>Stormtrooper Lightsaber</td>
               <td>Figura Coleccionable</td>
               <td>
-                <a href=""
+                <a href="./edit.html"
                   ><img src="../../img/icons/edit_pencil.svg" alt=""
                 /></a>
               </td>
