--- a/pages/admin/create.html
+++ b/pages/admin/create.html
@@ -22,33 +22,8 @@
           </a>
         </picture>
         <ul class="navbar__menu">
-          <li class="navbar__item with-submenu">
-            <a class="navbar__link with-icon" href="../../pages/shop/shop.html"
-              >SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon
-            ></a>
-
-            <ul class="submenu">
-              <li class="submenu__item">
-                <a href="" class="submenu__link">Funkos</a>
-              </li>
-              <li class="submenu__item">
-                <a href="" class="submenu__link">Remeras</a>
-              </li>
-              <li class="submenu__item">
-                <a href="" class="submenu__link">Llaveros</a>
-              </li>
-            </ul>
-          </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="../pages/contact.html">CONTACTO</a>
-          </li>
-          <li class="navbar__item">
-            <a class="navbar__link" href="../pages/admin/login.html">LOGIN</a>
-          </li>
-          <li class="navbar__item">
-            <a class="navbar__cart" href="../pages/cart.html">
-              <img src="../../img/icons/cart-icon.svg" alt="ícono de carrito" />
-            </a>
+            <a class="navbar__link" href="../pages/admin/logout.html">Salir</a>
           </li>
         </ul>
       </nav>
