--- a/pages/shop/item.html
+++ b/pages/shop/item.html
@@ -23,7 +23,7 @@
         </picture>
         <ul class="navbar__menu">
           <li class="navbar__item with-submenu">
-            <a class="navbar__link with-icon" href="./pages/shop/shop.html"
+            <a class="navbar__link with-icon" href="./shop.html"
               >SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon
             ></a>
 
@@ -43,10 +43,10 @@
             <a class="navbar__link" href="./pages/contact.html">CONTACTO</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a>
+            <a class="navbar__link" href="./../admin/login.html">LOGIN</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__cart" href="./pages/cart.html">
+            <a class="navbar__cart" href="./../shop/cart.html">
               <img src="../../img/icons/cart-icon.svg" alt="ícono de carrito" />
             </a>
           </li>
@@ -164,10 +164,10 @@
             <a class="navbar__link" href="../admin/register.html">REGISTRARSE</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a>
+            <a class="navbar__link" href="../admin/login.html">LOGIN</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="./pages/contact.html">CONTACTO</a>
+            <a class="navbar__link" href="./../contact.html">CONTACTO</a>
           </li>
         </ul>
         <picture>
